--- a/main/assets/bundles/bundle.properties
+++ b/main/assets/bundles/bundle.properties
@@ -5,6 +5,18 @@ whitespacebetween=true
 cell=Cell
 item.disintegration-iron.name=Iron
 item.disintegration-iron.description=Used in basic buildings construct.
+item.disintegration-nickel.name=Nickel
+item.disintegration-nickel.description=Used in basic buildings construct.
+item.disintegration-lithium.name=Lithium
+item.disintegration-lithium.description=Used for fuel and battery production.
+item.disintegration-obsidian.name=Obsidian
+item.disintegration-obsidian.description=
+item.disintegration-tantalum-tungsten-alloy.name=Tantalum Tungsten Alloy
+item.disintegration-tantalum-tungsten-alloy.description=
+item.disintegration-tantalum.name=Tantalum
+item.disintegration-tantalum.description=
+item.disintegration-silicon-crystal.name=Silicon Crystal
+item.disintegration-silicon-crystal.description=
 item.disintegration-steel.name=Steel
 item.disintegration-steel.description=Used in durable structures.
 item.disintegration-silver.name=Silver
@@ -82,6 +94,8 @@ block.disintegration-iron-router.name=Iron Router
 block.disintegration-iron-router.description=Distributes input items to 3 output directions equally.
 block.disintegration-iridium-conveyor.name=Iridium Conveyor
 block.disintegration-iridium-conveyor.description=Transports items forward. Faster than iron conveyor.
+block.disintegration-portable-drill-unloader.name=Portable Drill Unloader
+block.disintegration-portable-drill-unloader.description=
 block.disintegration-heat-conduit.name=Heat Conduit
 block.disintegration-heat-conduit.description=Conducts heat. Used in conjunction with heaters and other heat conduits.
 block.disintegration-heat-conduit-router.name=Heat Conduit Router
@@ -100,18 +114,28 @@ block.disintegration-power-capacitor.name=Power Capacitor
 block.disintegration-power-capacitor.description=Stores power in times of surplus energy. Outputs power in times of deficit.
 block.disintegration-arc-reactor.name=Arc Reactor
 block.disintegration-arc-reactor.description=Generates power with surge's charge and magnetism alloy's magnetism.
+block.disintegration-power-driver.name=Power Driver
+block.disintegration-power-driver.description=
+block.disintegration-tokamak-fusion-reactor.name=Tokamak Fusion Reactor
+block.disintegration-tokamak-fusion-reactor.description=
 block.disintegration-neoplasm-generator.name=Neoplasm Generator
 block.disintegration-neoplasm-generator.description=Generates power with neoplasm. Will inflect nearby blocks.
 block.disintegration-space-solar-panel.name=Solar Panel
 block.disintegration-space-solar-panel.description=Generates power with sunlight.
 block.disintegration-rotate-solar-panel.name=Solar Panel
 block.disintegration-rotate-solar-panel.description=Generates power with sunlight.
+block.disintegration-solar-mirror.name=Solar Mirror
+block.disintegration-solar-mirror.description=
+block.disintegration-solar-boiler.name=Solar Boiler
+block.disintegration-solar-boiler.description=
 block.disintegration-burning-heater.name=Burning Heater
 block.disintegration-burning-heater.description=Heating by burning flammable materials, such as coal.
 block.disintegration-thermal-heater.name=Thermal Heater
 block.disintegration-thermal-heater.description=Produces heat when placed in hot locations.
 block.disintegration-unit-fabricator.name=Unit Fabricator
 block.disintegration-unit-fabricator.description=Produces units. Output units can be used directly, or moved into reconstructors for upgrading.
+block.disintegration-unit-producer.name=Unit Producer
+block.disintegration-unit-producer.description=Produces units. Output units can be used directly, or moved into reconstructors for upgrading.
 block.disintegration-additive-refabricator.name=Additive Refabricator
 block.disintegration-additive-refabricator.description=Upgrades inputted units to the second tier.
 block.disintegration-multiplicative-refabricator.name=Multiplicative Refabricator
@@ -124,6 +148,8 @@ block.disintegration-pressure-drill.name=Pressure Drill
 block.disintegration-pressure-drill.description=When placed on ore, outputs items at a slow pace indefinitely. Only capable of mining basic resources.
 block.disintegration-stiff-drill.name=Stiff Drill
 block.disintegration-stiff-drill.description=An improved drill, capable of mining silver. Mines at a faster pace than a pressure drill.
+block.disintegration-cutting-drill.name=Cutting Drill
+block.disintegration-cutting-drill.description=
 block.disintegration-portable-drill.name=Portable Drill
 block.disintegration-portable-drill.description=When placed on ore, outputs items at a slow pace indefinitely. Only capable of mining basic resources.\n it can move and automatically move items to the nearest unloading point.
 block.disintegration-algal-pond.name=Algal Pond
@@ -147,8 +173,14 @@ block.disintegration-light-space.name=Space Station Space
 block.disintegration-space-station-floor.name=Space Station Floor
 block.disintegration-quarry.name=Quarry
 block.disintegration-quarry.description=mines front area of ores.
+block.disintegration-sabre.name=Sabre
+block.disintegration-sabre.description=Fires piercing bullets at enemies.
+block.disintegration-franklinism.name=Franklinism
+block.disintegration-franklinism.description=Fires arcs of electricity at ground targets.
+block.disintegration-amperage.name=Amperage
+block.disintegration-amperage.description=
 block.disintegration-axe.name=Axe
-block.disintegration-axe.description=Fires quadriparts homing missiles at enemies.
+block.disintegration-axe.description=Launches quadriparts homing missiles at enemies.
 block.disintegration-voltage.name=Voltage
 block.disintegration-voltage.description=Fires an arc ball at enemies.
 block.disintegration-awake.name=Awake
@@ -193,6 +225,10 @@ block.disintegration-aegis.name=Aegis
 block.disintegration-aegis.description=Fires laser bolts that damage enemies and repair allied structures.
 block.disintegration-permeation.name=Permeation
 block.disintegration-permeation.description=Fires three close-range piercing bullets at nearby enemies.
+block.disintegration-portable-turret.name=Portable Turret
+block.disintegration-portable-turret.description=
+block.disintegration-wander.name=Wander
+block.disintegration-wander.description=
 block.disintegration-iron-wall.name=Iron Wall
 block.disintegration-iron-wall.description=Protects structures from enemy projectiles.
 block.disintegration-iron-wall-large.name=Large Iron Wall
@@ -215,6 +251,22 @@ block.disintegration-nitride-wall.name=Nitride Wall
 block.disintegration-nitride-wall.description=Protects structures from enemy projectiles, periodically releasing lasers upon contact.
 block.disintegration-nitride-wall-large.name=Large Nitride Wall
 block.disintegration-nitride-wall-large.description=Protects structures from enemy projectiles, periodically releasing lasers upon contact.
+block.disintegration-nickel-wall.name=Nickel Wall
+block.disintegration-nickel-wall.description=Protects structures from enemy projectiles.
+block.disintegration-nickel-wall-large.name=Nickel Wall
+block.disintegration-nickel-wall-large.description=Protects structures from enemy projectiles.
+block.disintegration-laser-defence-tower.name=Laser Defence Tower
+block.disintegration-laser-defence-tower.description=
+block.disintegration-circle-force-projector.name=Circle Force Projector
+block.disintegration-circle-force-projector.description=
+block.disintegration-payload-duct.name=Payload Duct
+block.disintegration-payload-duct.description=
+block.disintegration-payload-duct-router.name=Payload Duct Router
+block.disintegration-payload-duct-router.description=
+block.disintegration-payload-duct-junction.name=Payload Duct Junction
+block.disintegration-payload-duct-junction.description=
+block.disintegration-payload-teleporter.name=Payload Teleporter
+block.disintegration-payload-teleporter.description=
 block.disintegration-payload-constructor.name=Block Constructor
 block.disintegration-payload-constructor.description=Block Constructor
 block.disintegration-large-payload-constructor.name=Large Block Constructor
@@ -348,6 +400,8 @@ unit.disintegration-space-station-drone.name=Space Station Drone
 unit.disintegration-space-station-drone.description=Builds structures to defend the space station. Repairs structures with a beam.
 unit.disintegration-repair-drone.name=Repair Drone
 unit.disintegration-refabricating-drone.name=Refabricating Drone
+unit.disintegration-portable-drill-unit.name=Portable Drill
+unit.disintegration-portable-turret-unit.name=Portable Turret
 status.disintegration-sanded.name=Sanded
 status.disintegration-electric-resonated.name=Electric Resonated
 status.corroded.name=Corroded
