--- a/main/assets/bundles/bundle.properties
+++ b/main/assets/bundles/bundle.properties
@@ -29,7 +29,7 @@ item.disintegration-ionic-alloy.name=Ionic Alloy
 item.disintegration-ionic-alloy.description=Used in electric turret and ammo.
 item.disintegration-conduction-alloy.name=Conduction Alloy
 item.disintegration-conduction-alloy.description=Used in electric transmission and advanced electrics.
-item.disintegration-conduction-alloy.detail=Has superconductivity. Transition temperature is 163K. In the Omurlo environment, it is easy to reach.
+item.disintegration-conduction-alloy.detail=Has superconductivity. Transition temperature is 65K. In the Omurlo environment, it is easy to reach.
 item.disintegration-iridium.name=Iridium
 item.disintegration-iridium.description=Used in high-hardness armors.
 item.disintegration-nitride.name=Nitride
@@ -303,6 +303,8 @@ block.disintegration-core-pedestal.name=Core: Pedestal
 block.disintegration-core-pedestal.description=Core of the base. Once destroyed, the sector is lost.
 block.disintegration-core-pillar.name=Core: Pillar
 block.disintegration-core-pillar.description=Core of the base. Well armored. Stores more resources than a Pedestal.
+block.disintegration-core-altar.name=Core: Altar
+block.disintegration-core-altar.description=Core of the base. Well armored.
 block.disintegration-space-station-core.name=Space Station Core
 block.disintegration-space-station-core.description=Core of the space station. Once destroyed, the sector is lost.
 block.disintegration-space-station-builder-1.name=Space Station Builder 1
@@ -396,6 +398,8 @@ unit.disintegration-separate.name=Separate
 unit.disintegration-separate.description=Builds structures to defend the Pedestal core. Repairs structures with laser bolts.
 unit.disintegration-attract.name=Attract
 unit.disintegration-attract.description=Builds structures to defend the Pillar core. Repairs structures with laser bolts.
+unit.disintegration-blend.name=Blend
+unit.disintegration-blend.description=Builds structures to defend the Altar core. Repairs structures with laser bolts.
 unit.disintegration-space-station-drone.name=Space Station Drone
 unit.disintegration-space-station-drone.description=Builds structures to defend the space station. Repairs structures with a beam.
 unit.disintegration-repair-drone.name=Repair Drone
