--- a/main/assets/bundles/bundle.properties
+++ b/main/assets/bundles/bundle.properties
@@ -1,5 +1,3 @@
-mod.disintegration.name=Disintegration
-mod.disintegration.description=A WIP V7 mindustry JAVA mod
 spacestation=Space Station
 whitespacebetween=true
 cell=Cell
@@ -43,6 +41,8 @@ liquid.disintegration-liquid-crystal.description=Used in advanced material produ
 liquid.disintegration-oxygen.name=Oxygen
 liquid.disintegration-oxygen.description=Used as an oxidizing agent in material production, and as fuel. Moderately explosive.
 liquid.disintegration-algal-water.name=Algal Water
+liquid.disintegration-carbon-dioxide.name=Carbon Dioxide
+liquid.disintegration-molten-lithium.name=Molten Lithium
 block.disintegration-magnetism-alloy-smelter.name=Magnetism Alloy Smelter
 block.disintegration-magnetism-alloy-smelter.description=Fuses silver, silicon and nitrogen to magnetism alloy.
 block.disintegration-conduction-alloy-smelter.name=Conduction Alloy Smelter
@@ -78,8 +78,26 @@ block.disintegration-blast-compound-mixer.description=Produces blast compound fr
 block.disintegration-nitride-synthesizer.name=Nitride Synthesizer
 block.disintegration-nitride-synthesizer.description=Synthesizes nitride from nitrogen and gallium. Requires heat and hydrogen.
 block.slag-centrifuge.description=Separates slag into gallium at low efficiency.
+block.disintegration-liquid-cell-packer.name=Liquid Cell Packer
+block.disintegration-liquid-cell-packer.description=
+block.disintegration-liquid-cell-unpacker.name=Liquid Cell Unpacker
+block.disintegration-liquid-cell-unpacker.description=
+block.disintegration-pyrolysis-furnace.name=Pyrolysis Furnace
+block.disintegration-pyrolysis-furnace.descriptoion=
+block.disintegration-tantalum-tungsten-alloy-smelter.name=Tantalum Tungsten Alloy Smelter
+block.disintegration-tantalum-tungsten-alloy-smelter.description=
+block.disintegration-surge-kiln.name=Surge Kiln
+block.disintegration-surge-kiln.description=
+block.disintegration-resistance-heater.name=Resistance heater
+block.disintegration-resistance-heater.description=
+block.disintegration-heat-relocator.name=Heat Relocator
+block.disintegration-heat-relocator.description=
+block.disintegration-heat-exchanger.name=Heat Exchanger
+block.disintegration-heat-exchanger.description=
 block.disintegration-iron-conveyor.name=Iron Conveyor
 block.disintegration-iron-conveyor.description=Transports items forward.
+block.disintegration-pipe.name=Pipe
+block.disintegration-pipe.description=Transports items forward.
 block.disintegration-iron-bridge-conveyor.name=Iron Bridge Conveyor
 block.disintegration-iron-bridge-conveyor.description=Transports items over terrain or buildings.
 block.disintegration-alternate-overflow-gate.name=Alternate Overflow Gate
@@ -90,8 +108,12 @@ block.disintegration-inverted-iron-sorter.name=Inverted Iron Sorter
 block.disintegration-inverted-iron-sorter.description=Similar to a standard sorter, but outputs selected items to the sides instead.
 block.disintegration-iron-junction.name=Iron Junction
 block.disintegration-iron-junction.description=Acts as a bridge for two crossing conveyor belts.
+block.disintegration-pipe-junction.name=Pipe Junction
+block.disintegration-pipe-junction.description=Acts as a bridge for two crossing pipes.
 block.disintegration-iron-router.name=Iron Router
 block.disintegration-iron-router.description=Distributes input items to 3 output directions equally.
+block.disintegration-pipe-router.name=Pipe Router
+block.disintegration-pipe-router.description=
 block.disintegration-iridium-conveyor.name=Iridium Conveyor
 block.disintegration-iridium-conveyor.description=Transports items forward. Faster than iron conveyor.
 block.disintegration-portable-drill-unloader.name=Portable Drill Unloader
@@ -102,10 +124,24 @@ block.disintegration-heat-conduit-router.name=Heat Conduit Router
 block.disintegration-heat-conduit-router.description=Spreads heat in three output directions.
 block.disintegration-magnetized-conduit.name=Magnetized Conduit
 block.disintegration-magnetized-conduit.description=Moves liquids forward. Transports faster and stores more than standard conduits.
+block.disintegration-gear-pump.name=Gear Pump
+block.disintegration-gear-pump.description=
+block.disintegration-centrifugal-pump.name=Centrifugal Pump
+block.disintegration-centrifugal-pump.description=
+block.disintegration-thermal-pump.name=Thermal Pump
+block.disintegration-thermal-pump.description=
+block.disintegration-liquid-capsule.name=Liquid Capsule
+block.disintegration-liquid-capsule.description=
 block.disintegration-vent-turbine.name=Vent Turbine
 block.disintegration-vent-turbine.description=Generates power when placed on vents.
 block.disintegration-turbine-generator.name=Turbine Generator
 block.disintegration-turbine-generator.description=Generates power with steam. Returns water.
+block.disintegration-burning-generator.name=Burning Generator
+block.disintegration-burning-generator.description=
+block.disintegration-inertial-confinement-fusion-reactor.name=Inertial Confinement Fusion Reactor
+block.disintegration-inertial-confinement-fusion-reactor.description=
+block.disintegration-lithium-battery.name=Lithium Battery
+block.disintegration-lithium-battery.description=
 block.disintegration-iron-power-node.name=Iron Power Node
 block.disintegration-iron-power-node.description=Transmits power to connected nodes. The node will receive power from or supply power to any adjacent blocks.
 block.disintegration-iron-power-node-large.name=Large Iron Power Node
@@ -124,6 +160,8 @@ block.disintegration-space-solar-panel.name=Solar Panel
 block.disintegration-space-solar-panel.description=Generates power with sunlight.
 block.disintegration-rotate-solar-panel.name=Solar Panel
 block.disintegration-rotate-solar-panel.description=Generates power with sunlight.
+block.disintegration-twin-solar-panel.name=Solar Panel
+block.disintegration-twin-solar-panel.description=Generates power with sunlight.
 block.disintegration-solar-mirror.name=Solar Mirror
 block.disintegration-solar-mirror.description=
 block.disintegration-solar-boiler.name=Solar Boiler
@@ -152,6 +190,14 @@ block.disintegration-cutting-drill.name=Cutting Drill
 block.disintegration-cutting-drill.description=
 block.disintegration-portable-drill.name=Portable Drill
 block.disintegration-portable-drill.description=When placed on ore, outputs items at a slow pace indefinitely. Only capable of mining basic resources.\n it can move and automatically move items to the nearest unloading point.
+block.disintegration-plasma-beam-drill.name=Plasma Beam Drill
+block.disintegration-plasma-beam-drill.description=
+block.disintegration-hammering-drill.name=Hammering Drill
+block.disintegration-hammering-drill.description=
+block.disintegration-plasma-drill.name=Plasma Drill
+block.disintegration-plasma-drill.description=
+block.disintegration-gas-collector.name=Gas Collector
+block.disintegration-gas-collector.description=
 block.disintegration-algal-pond.name=Algal Pond
 block.disintegration-algal-pond.description=foster tiny concentrations of aqueous algae into algal water and oxygen.
 block.disintegration-laser-device.name=Laser Device
@@ -169,8 +215,13 @@ block.disintegration-green-ice.name=Green Ice
 block.disintegration-green-ice-wall.name=Green Ice Wall
 block.disintegration-green-floor.name=Green Floor
 block.disintegration-ice-water.name=Ice Water
-block.disintegration-light-space.name=Space Station Space
 block.disintegration-space-station-floor.name=Space Station Floor
+block.disintegration-space-station-floor-fixed.name=Fixed Space Station Floor
+block.disintegration-pooled-molten-lithium.name=Molten Lithium
+block.disintegration-lithium-stone.name=Lithium Stone
+block.disintegration-lithium-stone-wall.name=Lithium Stone Wall
+block.disintegration-obsidian-floor.name=Obsidian Floor
+block.disintegration-obsidian-wall.name=Obsidian Wall
 block.disintegration-quarry.name=Quarry
 block.disintegration-quarry.description=mines front area of ores.
 block.disintegration-sabre.name=Sabre
@@ -229,6 +280,24 @@ block.disintegration-portable-turret.name=Portable Turret
 block.disintegration-portable-turret.description=
 block.disintegration-wander.name=Wander
 block.disintegration-wander.description=
+block.disintegration-flash.name=Flash
+block.disintegration-flash.description=
+block.disintegration-pentration.name=Pentration
+block.disintegration-pentration.description=
+block.disintegration-discipline.name=Discipline
+block.disintegration-discipline.description=
+block.disintegration-spark.name=Spark
+block.disintegration-spark.description=
+block.disintegration-vortex.name=Vortex
+block.disintegration-vortex.description=
+block.disintegration-retribution.name=Retribution
+block.disintegration-retribution.description=
+block.disintegration-flame.name=Flame
+block.disintegration-flame.description=
+block.disintegration-chain.name=Chain
+block.disintegration-chain.description=
+block.disintegration-domain.name=Domain
+block.disintegration-domain.description=
 block.disintegration-iron-wall.name=Iron Wall
 block.disintegration-iron-wall.description=Protects structures from enemy projectiles.
 block.disintegration-iron-wall-large.name=Large Iron Wall
@@ -265,6 +334,11 @@ block.disintegration-payload-duct-router.name=Payload Duct Router
 block.disintegration-payload-duct-router.description=
 block.disintegration-payload-duct-junction.name=Payload Duct Junction
 block.disintegration-payload-duct-junction.description=
+block.disintegration-payload-duct-loader.name=Payload Duct Loader
+block.disintegration-payload-duct-loader.description=
+block.disintegration-payload-duct-unloader.name=Payload Duct Unloader
+block.disintegration-payload-propulsor.name=Payload Propulsor
+block.disintegration-payload-propulsor.description=
 block.disintegration-payload-teleporter.name=Payload Teleporter
 block.disintegration-payload-teleporter.description=
 block.disintegration-payload-constructor.name=Block Constructor
@@ -305,6 +379,12 @@ block.disintegration-core-pillar.name=Core: Pillar
 block.disintegration-core-pillar.description=Core of the base. Well armored. Stores more resources than a Pedestal.
 block.disintegration-core-altar.name=Core: Altar
 block.disintegration-core-altar.description=Core of the base. Well armored.
+block.disintegration-core-plain.name=Core: Plain
+block.disintegration-core-plain.description=
+block.disintegration-core-extender.name=Core Storage Extender
+block.disintegration-core-extender.description=
+block.disintegration-item-capsule.name=Item Capsule
+block.disintegration-item-capsule.description=
 block.disintegration-space-station-core.name=Space Station Core
 block.disintegration-space-station-core.description=Core of the space station. Once destroyed, the sector is lost.
 block.disintegration-space-station-builder-1.name=Space Station Builder 1
@@ -344,6 +424,8 @@ block.disintegration-space-launch-pad.details=Orbital system for space-station-t
 block.disintegration-interplanetary-launch-pad.name=Interplanetary Launch Pad
 block.disintegration-interplanetary-launch-pad.description=Launches batches of items to selected space station.
 block.disintegration-interplanetary-launch-pad.details=Orbital system for space-station-to-space-station transportation of resources.
+block.disintegration-general-switch.name=General Switch
+block.disintegration-general-switch.description=
 unit.disintegration-lancet.name=Lancet
 unit.disintegration-lancet.description=Fires laser bolts at nearby enemies.
 unit.disintegration-talwae.name=Talwar
@@ -414,8 +496,8 @@ planet.disintegration-luna.name=Luna
 planet.disintegration-terminsi.name=Terminsi
 planet.disintegration-cosiuaz.name=Cosiuaz
 planet.disintegration-caelpse.name=Caelpse
-sector.disintegration-launching-area.name=Launching Area
-sector.disintegration-launching-area.description=This is the third planet's begin,take some irons  and lead here.
+sector.disintegration-landing-area.name=Landing Area
+sector.disintegration-landing-area.description=This is the third planet's begin,take some irons  and lead here.
 sector.disintegration-planetary-monitoring-center.name=Planetary Monitoring Center
 sector.disintegration-planetary-monitoring-center.description=The enemy detects every move of the all the orbiting celestial body through here.Destroy enemy's core.
 stat.shardchance=Lightning Chance
